# InstaChatico

./: .env.example  .gitignore  DOCUMENT_INTELLIGENCE_IMPLEMENTATION.md  DOCUMENT_INTELLIGENCE_PLAN.md  Dockerfile  MIGRATION-TO-PDFPLUMBER.md  MIGRATION_GUIDE.md  POETRY-CPU-PYTORCH-SOLUTION.md  README.md  TEST_DATA_IMPLEMENTATION_SUMMARY.md  TEST_DATA_QUICKSTART.md  VERIFICATION_REPORT.md  WORKER_USER_SETUP.md  celery_worker.py  docker-compose.yml  init.sql  instagram_token_setup.md  main.py  manage_migrations.py  pyproject.toml  pytest.ini  setup-worker-user.sh  setup_instagram_env.sh  test_document_api.sh  test_instagram_token.py  validate_migrations.py
.claude/: CLAUDE.md
alembic/: env.py
alembic/versions/: 2025_09_22_1731-9664768bd8eb_.py  (+16 more)
api_v1/: __init__.py
core/: celery_app.py  celery_config.py  config.py  exceptions.py  logging_config.py  simple_dependencies.py
database/: init.sql
docker/: Dockerfile  docker-compose.yml
docs/: AGENT_TOOLS_GUIDE.md  COMMENT_API.md  DEVELOPMENT_MODE_TESTING.md  EMBEDDING_SEARCH.md  OOD_DETECTION_SUMMARY.md  POSTMAN_TEST_PAYLOAD.md  SCHEMA_ARCHITECTURE.md  SIMPLE_ARCHITECTURE_GUIDE.md  TEST_DATA_MANAGEMENT.md  claude_issues_check.md  curs_issues_check.md  production_readiness_audit_2025.md
scripts/: load_test_data.py  test_development_endpoint.py  test_ood_detection.py  verify_embedding_setup.py  verify_structure.sh  verify_test_data.py
src/: celery_worker.py  main.py  test_imports.py
tests/: API_TEST_ENHANCEMENTS.md  FINAL_TEST_SUMMARY.md  JSONB_FIX_SUMMARY.md  README.md  TEST_FIXES_SUMMARY.md  conftest.py
(+236 files in other folders)
