[tool.poetry]
name = "instachatico"
version = "0.1.0"
description = ""
authors = ["Mikhail Denisov <denisovmvtmb@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.117.1"}
uvicorn = {extras = ["standard"], version = "^0.36.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
